--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,14 +30,15 @@
         <div class="shape" data-aos="fade-up-right" data-aos-duration="500" data-aos-delay="100"></div>
         <div class="shape" data-aos="fade-down-left" data-aos-duration="500" data-aos-delay="0"></div>
     </div>
-    <div class="container" style="z-index:10">
+    <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-                <h1 class="text-white font-weight-bold mb-4">Showcase your app with Small Apps</h1>
-                <p class="text-white mb-5">Besides its beautiful design. Laapp is an incredibly rich core framework
-                    for you to
-                    showcase your App.</p>
-                <a href="FAQ.html" class="btn btn-main-md">Download Now</a>
+                <h1 class="text-white font-weight-bold mb-4">Practica tus habilidades de matemática jugando</h1>
+                <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática será menos aburrido.</p>
+                <a href="" class="btn btn-rounded-icon">
+					<i class="ti-android"></i>
+					Android
+				</a>
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <img class="img-fluid" src="assets/images/mobile.png" alt="screenshot">
