--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -47,6 +47,10 @@ cite {
     font-style: normal;
 }
 
+.container {
+    padding: 0px 150px;
+}
+
 .lora {
     font-family: "Lora", serif;
     font-style : italic;
@@ -1182,7 +1186,7 @@ button:focus,
     width            : 200%;
     height           : 200%;
     border-radius    : 50%;
-    background-image : linear-gradient(45deg, #32a6c3 0%, #2d78e2 20%, #1e3a6b 50%);
+    background-image : linear-gradient(45deg, #009EC5 0%, #2e7eed 20%, #02225B 50%);
 }
 
 .pull-top {
