--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,13 +32,14 @@
     </div>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-                <h1 class="text-white font-weight-bold mb-4">Practica tus habilidades de matemática jugando</h1>
-                <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática será menos aburrido.</p>
-                <a href="" class="btn btn-rounded-icon">
-					<i class="ti-android"></i>
-					Android
-				</a>
+            <div class="col-md-6 order-2 order-md-1 text-md-left">
+                <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando</h1>
+                <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática será menos aburrido.
+                </p>
+                <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem">
+                    <i class="fa fa-android" aria-hidden="true"></i>
+                    Android
+                </a>
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <img class="img-fluid" src="assets/images/mobile.png" alt="screenshot">
@@ -47,3 +48,112 @@
     </div>
 </section>
 <!--====  End of Hero Section  ====-->
+
+<section class="section pt-0 position-relative pull-top">
+    <div class="container">
+        <div class="rounded shadow p-5 bg-white">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
+                    <i class="ti-paint-bucket text-primary h1"></i>
+                    <h3 class="mt-4 text-capitalize h5 ">Lucha</h3>
+                </div>
+                <div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
+                    <i class="ti-shine text-primary h1"></i>
+                    <h3 class="mt-4 text-capitalize h5 ">Obtén recompensas</h3>
+                </div>
+                <div class="col-lg-4 col-md-12 mt-5 mt-lg-0 text-center">
+                    <i class="ti-thought text-primary h1"></i>
+                    <h3 class="mt-4 text-capitalize h5 ">Mejora tu avatar</h3>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!--==================================
+=            Feature Grid            =
+===================================-->
+<section class="feature section pt-0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 ml-auto justify-content-center">
+                <!-- Feature Mockup -->
+                <div class="image-content" data-aos="fade-right">
+                    <img class="img-fluid" src="assets/images/feature/feature-new-01.jpg" alt="iphone">
+                </div>
+            </div>
+            <div class="col-lg-6 mr-auto align-self-center">
+                <div class="feature-content">
+                    <!-- Feature Title -->
+                    <h2>Increase your productivity with <a
+                            href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small
+                            Apps</a></h2>
+                    <!-- Feature Description -->
+                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat.</p>
+                </div>
+                <!-- Testimonial Quote -->
+                <div class="testimonial">
+                    <p>
+                        "InVision is a window into everything that's being designed at Twitter. It gets all of our
+                        best work in one
+                        place."
+                    </p>
+                    <ul class="list-inline meta">
+                        <li class="list-inline-item">
+                            <img src="assets/images/testimonial/feature-testimonial-thumb.jpg" alt="">
+                        </li>
+                        <li class="list-inline-item">Jonathon Andrew , Themefisher.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="feature section pt-0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 ml-auto align-self-center">
+                <div class="feature-content">
+                    <!-- Feature Title -->
+                    <h2>Increase your productivity with <a
+                            href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small
+                            Apps</a></h2>
+                    <!-- Feature Description -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut aliquip ex
+                        ea commodo consequat.</p>
+                </div>
+                <!-- Testimonial Quote -->
+                <div class="testimonial">
+                    <p>
+                        "InVision is a window into everything that's being designed at Twitter. It gets all of our
+                        best work in one
+                        place."
+                    </p>
+                    <ul class="list-inline meta">
+                        <li class="list-inline-item">
+                            <img src="assets/images/testimonial/feature-testimonial-thumb.jpg" alt="">
+                        </li>
+                        <li class="list-inline-item">Jonathon Andrew , Themefisher.com</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-6 mr-auto justify-content-center">
+                <!-- Feature mockup -->
+                <div class="image-content" data-aos="fade-left">
+                    <img class="img-fluid" src="assets/images/feature/feature-new-02.jpg" alt="ipad">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--====  End of Feature Grid  ====-->
