added features section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -87,29 +87,10 @@
             <div class="col-lg-6 mr-auto align-self-center">
                 <div class="feature-content">
                     <!-- Feature Title -->
-                    <h2>Increase your productivity with <a
-                            href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small
-                            Apps</a></h2>
+                    <h2>Derrota a monstruos resolviendo problemas</h2>
                     <!-- Feature Description -->
-                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut
-                        aliquip ex ea commodo consequat.</p>
-                </div>
-                <!-- Testimonial Quote -->
-                <div class="testimonial">
-                    <p>
-                        "InVision is a window into everything that's being designed at Twitter. It gets all of our
-                        best work in one
-                        place."
-                    </p>
-                    <ul class="list-inline meta">
-                        <li class="list-inline-item">
-                            <img src="assets/images/testimonial/feature-testimonial-thumb.jpg" alt="">
-                        </li>
-                        <li class="list-inline-item">Jonathon Andrew , Themefisher.com</li>
-                    </ul>
+                    <p class="desc">Elige la dificultad de los problemas para avanzar a tu ritmo y recibe recompensas
+                        para mejorar a tu avatar.</p>
                 </div>
             </div>
         </div>
@@ -122,29 +103,53 @@
             <div class="col-lg-6 ml-auto align-self-center">
                 <div class="feature-content">
                     <!-- Feature Title -->
-                    <h2>Increase your productivity with <a
-                            href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small
-                            Apps</a></h2>
+                    <h2>Practica los temas de tu elección</h2>
                     <!-- Feature Description -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut aliquip ex
-                        ea commodo consequat.</p>
+                    <p>Selecciona de una gran cantidad de áreas y temas de matemática.</p>
                 </div>
-                <!-- Testimonial Quote -->
-                <div class="testimonial">
-                    <p>
-                        "InVision is a window into everything that's being designed at Twitter. It gets all of our
-                        best work in one
-                        place."
-                    </p>
-                    <ul class="list-inline meta">
-                        <li class="list-inline-item">
-                            <img src="assets/images/testimonial/feature-testimonial-thumb.jpg" alt="">
-                        </li>
-                        <li class="list-inline-item">Jonathon Andrew , Themefisher.com</li>
-                    </ul>
+            </div>
+            <div class="col-lg-6 mr-auto justify-content-center">
+                <!-- Feature mockup -->
+                <div class="image-content" data-aos="fade-left">
+                    <img class="img-fluid" src="assets/images/feature/feature-new-02.jpg" alt="ipad">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="feature section pt-0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 ml-auto justify-content-center">
+                <!-- Feature Mockup -->
+                <div class="image-content" data-aos="fade-right">
+                    <img class="img-fluid" src="assets/images/feature/feature-new-01.jpg" alt="iphone">
+                </div>
+            </div>
+            <div class="col-lg-6 mr-auto align-self-center">
+                <div class="feature-content">
+                    <!-- Feature Title -->
+                    <h2>Customiza tu avatar</h2>
+                    <!-- Feature Description -->
+                    <p class="desc">Equipa a tu avatar con una gran variedad de armaduras, armas y escudos que puedes
+                        comprar de la tienda y
+                        cambia su color, raza y género.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="feature section pt-0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 ml-auto align-self-center">
+                <div class="feature-content">
+                    <!-- Feature Title -->
+                    <h2>Examina tu progreso</h2>
+                    <!-- Feature Description -->
+                    <p>Mira tus fortalezas y debilidades en matemática.</p>
                 </div>
             </div>
             <div class="col-lg-6 mr-auto justify-content-center">
