--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,28 +13,39 @@
 =====================================-->
 <section class="section gradient-banner">
     <div class="shapes-container">
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100"></div>
-        <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100"></div>
-        <div class="shape" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200"></div>
-        <div class="shape" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"></div>
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100"></div>
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100"></div>
-        <div class="shape" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300"></div>
-        <div class="shape" data-aos="fade-down-right" data-aos-duration="500" data-aos-delay="200"></div>
-        <div class="shape" data-aos="fade-down-right" data-aos-duration="500" data-aos-delay="100"></div>
-        <div class="shape" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="500"></div>
-        <div class="shape" data-aos="fade-up-right" data-aos-duration="500" data-aos-delay="200"></div>
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="500" data-aos-delay="100"></div>
-        <div class="shape" data-aos="fade-up" data-aos-duration="500" data-aos-delay="0"></div>
-        <div class="shape" data-aos="fade-down" data-aos-duration="500" data-aos-delay="0"></div>
-        <div class="shape" data-aos="fade-up-right" data-aos-duration="500" data-aos-delay="100"></div>
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="500" data-aos-delay="0"></div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-down-right" data-aos-duration="500" data-aos-delay="200" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-down-right" data-aos-duration="500" data-aos-delay="100" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="500" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-up-right" data-aos-duration="500" data-aos-delay="200" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="500" data-aos-delay="100" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-up" data-aos-duration="500" data-aos-delay="0" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-down" data-aos-duration="500" data-aos-delay="0" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-up-right" data-aos-duration="500" data-aos-delay="100" data-aos-offset="0">
+        </div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="500" data-aos-delay="0" data-aos-offset="0">
+        </div>
     </div>
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 order-2 order-md-1 text-md-left">
                 <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando</h1>
-                <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática será menos aburrido.
+                <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática será menos
+                    aburrido.
                 </p>
                 <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem">
                     <i class="fa fa-android" aria-hidden="true"></i>
@@ -80,7 +91,7 @@
         <div class="row">
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
-                <div class="image-content" data-aos="fade-right">
+                <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                     <img class="img-fluid" src="assets/images/feature/feature-new-01.jpg" alt="iphone">
                 </div>
             </div>
@@ -89,7 +100,8 @@
                     <!-- Feature Title -->
                     <h2>Derrota a monstruos resolviendo problemas</h2>
                     <!-- Feature Description -->
-                    <p class="desc">Elige la dificultad de los problemas para avanzar a tu ritmo y recibe recompensas
+                    <p class="desc">Elige la dificultad de los problemas para avanzar a tu ritmo y recibe
+                        recompensas
                         para mejorar a tu avatar.</p>
                 </div>
             </div>
@@ -110,7 +122,7 @@
             </div>
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
-                <div class="image-content" data-aos="fade-left">
+                <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                     <img class="img-fluid" src="assets/images/feature/feature-new-02.jpg" alt="ipad">
                 </div>
             </div>
@@ -123,7 +135,7 @@
         <div class="row">
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
-                <div class="image-content" data-aos="fade-right">
+                <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                     <img class="img-fluid" src="assets/images/feature/feature-new-01.jpg" alt="iphone">
                 </div>
             </div>
@@ -132,7 +144,8 @@
                     <!-- Feature Title -->
                     <h2>Customiza tu avatar</h2>
                     <!-- Feature Description -->
-                    <p class="desc">Equipa a tu avatar con una gran variedad de armaduras, armas y escudos que puedes
+                    <p class="desc">Equipa a tu avatar con una gran variedad de armaduras, armas y escudos que
+                        puedes
                         comprar de la tienda y
                         cambia su color, raza y género.</p>
                 </div>
@@ -154,7 +167,7 @@
             </div>
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
-                <div class="image-content" data-aos="fade-left">
+                <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                     <img class="img-fluid" src="assets/images/feature/feature-new-02.jpg" alt="ipad">
                 </div>
             </div>
