--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -60,28 +60,40 @@
 </section>
 <!--====  End of Hero Section  ====-->
 
+<!--==================================
+=            Highlight Section            =
+===================================-->
+
 <section class="section pt-0 position-relative pull-top">
     <div class="container">
-        <div class="rounded shadow p-5 bg-white">
+        <div class="rounded shadow p-4 bg-white text-center">
             <div class="row">
-                <div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
-                    <i class="ti-paint-bucket text-primary h1"></i>
+                <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+                    <img class="pixel-art center" src="assets/images/highlight/fight.png" height="170px" alt="lucha">
+                </div>
+                <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+                    <img class="pixel-art center" src="assets/images/highlight/buy.png" height="150px" alt="compra">
+                </div>
+                <div class="col-lg-4 col-md-12 mt-5 mt-lg-0">
+                    <img class="pixel-art center" src="assets/images/highlight/upgrade.png" height="100px" alt="mejora">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mt-5 mt-md-0  align-items-center">
                     <h3 class="mt-4 text-capitalize h5 ">Lucha</h3>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
-                    <i class="ti-shine text-primary h1"></i>
+                <div class="col-lg-4 col-md-6 mt-5 mt-md-0 align-items-center">
                     <h3 class="mt-4 text-capitalize h5 ">Obtén recompensas</h3>
                 </div>
-                <div class="col-lg-4 col-md-12 mt-5 mt-lg-0 text-center">
-                    <i class="ti-thought text-primary h1"></i>
+                <div class="col-lg-4 col-md-12 mt-5 mt-lg-0 align-items-center">
                     <h3 class="mt-4 text-capitalize h5 ">Mejora tu avatar</h3>
-                    <p></p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
+<!--====  End of Highlight Section  ====-->
 
 <!--==================================
 =            Feature Grid            =
@@ -92,7 +104,7 @@
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature-new-01.jpg" alt="iphone">
+                    <img class="img-fluid" src="assets/images/feature/feature1.jpg" alt="iphone">
                 </div>
             </div>
             <div class="col-lg-6 mr-auto align-self-center">
@@ -123,7 +135,7 @@
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature-new-02.jpg" alt="ipad">
+                    <img class="img-fluid" src="assets/images/feature/feature2.jpg" alt="ipad">
                 </div>
             </div>
         </div>
@@ -136,7 +148,7 @@
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature-new-01.jpg" alt="iphone">
+                    <img class="img-fluid" src="assets/images/feature/feature1.jpg" alt="iphone">
                 </div>
             </div>
             <div class="col-lg-6 mr-auto align-self-center">
@@ -168,7 +180,7 @@
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature-new-02.jpg" alt="ipad">
+                    <img class="img-fluid" src="assets/images/feature/feature2.jpg" alt="ipad">
                 </div>
             </div>
         </div>
