--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
-                <img class="img-fluid" src="assets/images/mobile.png" alt="screenshot">
+                <img class="img-fluid" src="assets/images/hero.png" alt="aplicación mobil">
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature1.jpg" alt="iphone">
+                    <img class="img-fluid" src="assets/images/feature/feature1.png" alt="feature1">
                 </div>
             </div>
             <div class="col-lg-6 mr-auto align-self-center">
@@ -135,7 +135,7 @@
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature2.jpg" alt="ipad">
+                    <img class="img-fluid" src="assets/images/feature/feature-example-1.jpg" alt="feature2">
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature1.jpg" alt="iphone">
+                    <img class="img-fluid" src="assets/images/feature/feature-example-2.jpg" alt="feature3">
                 </div>
             </div>
             <div class="col-lg-6 mr-auto align-self-center">
@@ -180,7 +180,7 @@
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature2.jpg" alt="ipad">
+                    <img class="img-fluid " src="assets/images/feature/feature4.png" alt="feature4" width="320">
                 </div>
             </div>
         </div>
