--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -43,17 +43,23 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 order-2 order-md-1 text-md-left">
-                <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando</h1>
-                <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática será menos
-                    aburrido.
-                </p>
-                <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem">
-                    <i class="fa fa-android" aria-hidden="true"></i>
+                <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
+                    <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando
+                    </h1>
+                    <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática
+                        será menos
+                        aburrido.
+                    </p>
+                </div>
+
+                <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem" data-aos="fade-up">
+                    <i class="fa fa-android" data-aos-delay="2000" data-aos-delay="300" aria-hidden="true"></i>
                     Android
                 </a>
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
-                <img class="img-fluid" src="assets/images/hero.png" alt="aplicación mobil">
+                <img class="img-fluid" src="assets/images/hero.png" alt="aplicación mobil" data-aos="fade-up"
+                    data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
             </div>
         </div>
     </div>
@@ -188,17 +194,20 @@
 </section>
 <!--====  End of Feature Grid  ====-->
 
-<section class="call-to-action-app section bg-blue">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>Practica tus habilidades de matemática</h2>
-                <p>Obtén Mathyfight gratis!</p>
-                <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem">
-                    <i class="fa fa-android" aria-hidden="true"></i>
-                    Android
-                </a>
+<div class="bg-blue">
+    <section class="call-to-action-app section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Practica tus habilidades de matemática</h2>
+                    <p>Obtén Mathyfight gratis!</p>
+                    <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem">
+                        <i class="fa fa-android" aria-hidden="true"></i>
+                        Android
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    <img class="bottom pixel-art" src="assets/images/bottom.png" alt="bottom">
+</div>
