--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 order-2 order-md-1 text-md-left">
-                <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
+                <div data-aos="fade-right" data-aos-duration="1300" data-aos-delay="100" data-aos-offset="0">
                     <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando
                     </h1>
                     <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática
@@ -52,14 +52,16 @@
                     </p>
                 </div>
 
-                <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem" data-aos="fade-up">
-                    <i class="fa fa-android" data-aos-delay="2000" data-aos-delay="300" aria-hidden="true"></i>
-                    Android
-                </a>
+                <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
+                    <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem" data-aos="fade-up">
+                        <i class="fa fa-android"></i>
+                        Android
+                    </a>
+                </div>
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <img class="img-fluid" src="assets/images/hero.png" alt="aplicación mobil" data-aos="fade-up"
-                    data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
+                    data-aos-duration="1300" data-aos-delay="100" data-aos-offset="0">
             </div>
         </div>
     </div>
@@ -186,7 +188,7 @@
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid " src="assets/images/feature/feature4.png" alt="feature4" width="320">
+                    <img class="img-fluid " src="assets/images/feature/feature4.png" alt="feature4" width="275">
                 </div>
             </div>
         </div>
