--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -57,12 +57,35 @@ cite {
     }
 }
 
-.center {
-    position         : relative;
-    top              : 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform    : translateY(-50%);
-    transform        : translateY(-50%);
+.h-img-holder {
+    padding : 0;
+    position: relative;
+    width   : 100%;
+    height  : 10em;
+}
+
+.img-holder {
+    position: relative;
+    width   : 100%;
+    height  : 100%;
+}
+
+.center-bottom-img {
+    position: absolute;
+    top     : 2em;
+    bottom  : 0;
+    left    : 0;
+    right   : 0;
+    margin  : auto;
+}
+
+.center-img {
+    position: absolute;
+    top     : 0;
+    bottom  : 0;
+    left    : 0;
+    right   : 0;
+    margin  : auto;
 }
 
 .bottom {
