--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,7 +72,7 @@
 =            Highlight Section            =
 ===================================-->
 
-<section class="section pt-0 position-relative pull-top">
+<!-- <section class="section pt-0 position-relative pull-top">
     <div class="container">
         <div class="rounded shadow p-4 bg-white text-center">
             <div class="row">
@@ -99,7 +99,63 @@
             </div>
         </div>
     </div>
+</section> -->
+
+<section class="section pt-0 position-relative pull-top">
+    <div class="container">
+        <div class="rounded shadow p-4 bg-white text-center">
+            <div class="row justify-content-center">
+                <div class="col-3 p-0">
+                    <div class="row">
+                        <div class="h-img-holder">
+                            <img class="pixel-art center-img" src="assets/images/highlight/fight.png" alt="lucha"
+                                style="width:10em">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h3 class="mt-4 text-capitalize h4" style="font-weight: 500;">Lucha</h3>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <div class="img-holder">
+                        <img class="pixel-art center-img" src="assets/images/highlight/arrow.png" alt="flecha"
+                            style="width:3em">
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="row">
+                        <div class="h-img-holder">
+                            <img class="pixel-art center-img" src="assets/images/highlight/buy.png" style="width:9em"
+                                alt="compra">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h3 class="mt-4 text-capitalize h4" style="font-weight: 500;">Obtén recompensas</h3>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <div class="img-holder">
+                        <img class="pixel-art center-img" src="assets/images/highlight/arrow.png" alt="flecha"
+                            style="width:3em">
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="row">
+                        <div class="h-img-holder">
+                            <img class="pixel-art center-img" src="assets/images/highlight/upgrade.png"
+                                style="width:14em; top:2em;" alt="mejora">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h3 class="mt-4 text-capitalize h4" style="font-weight: 500;">Mejora tu avatar</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
+
 
 <!--====  End of Highlight Section  ====-->
 
