fixed timer on aos.refresh()

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+<!-- ng deploy --base-href=https://mathyfight.github.io/mathyfight-landing-page/ -->
+
 <nav class="navbar main-nav navbar-expand-lg px-2 px-sm-0 py-2 py-lg-2">
     <div class="container">
         <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
@@ -13,13 +15,13 @@
 =====================================-->
 <section class="section gradient-banner">
     <div class="shapes-container">
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100">
         </div>
-        <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0"></div>
-        <div class="shape" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="0">
+        <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100"></div>
+        <div class="shape" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200">
         </div>
-        <div class="shape" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="0"></div>
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0">
+        <div class="shape" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"></div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100">
         </div>
         <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0">
         </div>
