--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,135 @@
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i|Open+Sans:300,400,600,700,800");
 
+@media (max-width: 575px) {
+    h1 {
+        font-size  : 5vw;
+        line-height: 7vw;
+    }
+
+    p {
+        font-size     : 3vw;
+        letter-spacing: 0;
+        line-height   : 4vw;
+        color         : #808080;
+        margin-bottom : 0;
+    }
+
+    .container {
+        padding  : 0px 0px;
+        margin   : 0px 5%;
+        max-width: 90%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    h1 {
+        font-size  : 28px;
+        line-height: 38px;
+    }
+
+    p {
+        font-size     : 18px;
+        letter-spacing: 0;
+        line-height   : 25px;
+        color         : #808080;
+        margin-bottom : 0;
+    }
+
+    .container {
+        padding  : 0px 0px;
+        margin   : 0px 5%;
+        max-width: 90%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    h1 {
+        font-size  : 33px;
+        line-height: 40px;
+    }
+
+    p {
+        font-size     : 20px;
+        letter-spacing: 0;
+        line-height   : 25px;
+        color         : #808080;
+        margin-bottom : 0;
+    }
+
+    .container {
+        padding  : 0px 0px;
+        margin   : 0px 5%;
+        max-width: 90%;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    h1 {
+        font-size  : 35px;
+        line-height: 45px;
+    }
+
+    p {
+        font-size     : 20px;
+        letter-spacing: 0;
+        line-height   : 25px;
+        color         : #808080;
+        margin-bottom : 0;
+    }
+
+    .container {
+        padding: 0px 30px;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1399px) {
+    h1 {
+        font-size  : 35px;
+        line-height: 45px;
+    }
+
+    h2 {
+        font-size  : 38px;
+        line-height: 50px;
+    }
+
+    p {
+        font-size     : 20px;
+        letter-spacing: 0;
+        line-height   : 25px;
+        color         : #808080;
+        margin-bottom : 0;
+    }
+
+    .container {
+        padding: 0px 80px;
+    }
+}
+
+@media (min-width: 1400px) {
+    h1 {
+        font-size  : 45px;
+        line-height: 61px;
+    }
+
+    h2 {
+        font-size  : 40px;
+        line-height: 50px;
+    }
+
+    p {
+        font-size     : 20px;
+        letter-spacing: 0;
+        line-height   : 25px;
+        color         : #808080;
+        margin-bottom : 0;
+    }
+
+    .container {
+        padding: 0px 110px;
+    }
+}
+
 body {
     font-family           : "Open Sans", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -16,45 +146,14 @@ h6 {
     font-weight: 300;
 }
 
-h1 {
-    font-size  : 45px;
-    line-height: 61px;
-}
-
-h2 {
-    font-size  : 40px;
-    line-height: 50px;
-}
-
 h3 {
     font-size  : 20px;
     line-height: 30px;
 }
 
-p,
-li,
-blockquote,
-label {
-    font-size     : 20px;
-    letter-spacing: 0;
-    line-height   : 25px;
-    color         : #808080;
-    margin-bottom : 0;
-}
-
 cite {
     font-size : 14px;
     font-style: normal;
-}
-
-.container {
-    padding: 0px 110px;
-}
-
-@media (min-width: 1200px) and (max-width: 1399px) {
-    .container {
-        padding: 0px 110px;
-    }
 }
 
 .h-img-holder {
