--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,13 +15,13 @@
 =====================================-->
 <section class="section gradient-banner">
     <div class="shapes-container">
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100">
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
         </div>
-        <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100"></div>
-        <div class="shape" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200">
+        <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="0">
         </div>
-        <div class="shape" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"></div>
-        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100">
+        <div class="shape" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-offset="0"></div>
+        <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0">
         </div>
         <div class="shape" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0">
         </div>
@@ -44,7 +44,7 @@
     </div>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6 order-2 order-md-1 text-md-left">
+            <div class="col-6 text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1300" data-aos-delay="100" data-aos-offset="0">
                     <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando
                     </h1>
@@ -61,7 +61,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-6 text-center order-1 order-md-2">
+            <div class="col-6 text-center">
                 <img class="img-fluid" src="assets/images/hero.png" alt="aplicación mobil" data-aos="fade-up"
                     data-aos-duration="1300" data-aos-delay="100" data-aos-offset="0">
             </div>
@@ -73,35 +73,6 @@
 <!--==================================
 =            Highlight Section            =
 ===================================-->
-
-<!-- <section class="section pt-0 position-relative pull-top">
-    <div class="container">
-        <div class="rounded shadow p-4 bg-white text-center">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
-                    <img class="pixel-art center" src="assets/images/highlight/fight.png" height="170px" alt="lucha">
-                </div>
-                <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
-                    <img class="pixel-art center" src="assets/images/highlight/buy.png" height="150px" alt="compra">
-                </div>
-                <div class="col-lg-4 col-md-12 mt-5 mt-lg-0">
-                    <img class="pixel-art center" src="assets/images/highlight/upgrade.png" height="100px" alt="mejora">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mt-5 mt-md-0  align-items-center">
-                    <h3 class="mt-4 text-capitalize h5 ">Lucha</h3>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-5 mt-md-0 align-items-center">
-                    <h3 class="mt-4 text-capitalize h5 ">Obtén recompensas</h3>
-                </div>
-                <div class="col-lg-4 col-md-12 mt-5 mt-lg-0 align-items-center">
-                    <h3 class="mt-4 text-capitalize h5 ">Mejora tu avatar</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
 
 <section class="section pt-0 position-relative pull-top">
     <div class="container">
