--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,16 +46,16 @@
         <div class="row align-items-center">
             <div class="col-6 text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1300" data-aos-delay="100" data-aos-offset="0">
-                    <h1 class="text-white fw-bold mb-4">Practica tus habilidades de matemática jugando
+                    <h1 class="text-white fw-bold">Practica tus habilidades de matemática jugando
                     </h1>
-                    <p class="text-white mb-5">Con Mathyfight, prepararse para un examen de matemática
+                    <p class="text-white">Con Mathyfight, prepararse para un examen de matemática
                         será menos
                         aburrido.
                     </p>
                 </div>
 
                 <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
-                    <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem" data-aos="fade-up">
+                    <a href="" class="btn btn-rounded-icon" data-aos="fade-up">
                         <i class="fa fa-android"></i>
                         Android
                     </a>
