--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,51 +76,51 @@
 
 <section class="section pt-0 position-relative pull-top">
     <div class="container">
-        <div class="rounded shadow p-4 bg-white text-center">
+        <div class="rounded shadow p-sm-3 p-md-4 bg-white text-center">
             <div class="row justify-content-center">
                 <div class="col-3 p-0">
                     <div class="row">
                         <div class="h-img-holder">
-                            <img class="pixel-art center-img" src="assets/images/highlight/fight.png" alt="lucha"
-                                style="width:10em">
+                            <img class="pixel-art center-img highlight-section-1"
+                                src="assets/images/highlight/fight.png" alt="lucha">
                         </div>
                     </div>
                     <div class="row">
-                        <h3 class="mt-4 text-capitalize h4" style="font-weight: 500;">Lucha</h3>
+                        <h3 class="text-capitalize" style="font-weight: 500;">Lucha</h3>
                     </div>
                 </div>
                 <div class="col-1">
                     <div class="img-holder">
-                        <img class="pixel-art center-img" src="assets/images/highlight/arrow.png" alt="flecha"
-                            style="width:3em">
+                        <img class="pixel-art center-img highlight-section-arrow"
+                            src="assets/images/highlight/arrow.png" alt="flecha">
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="row">
                         <div class="h-img-holder">
-                            <img class="pixel-art center-img" src="assets/images/highlight/buy.png" style="width:9em"
+                            <img class="pixel-art center-img highlight-section-2" src="assets/images/highlight/buy.png"
                                 alt="compra">
                         </div>
                     </div>
                     <div class="row">
-                        <h3 class="mt-4 text-capitalize h4" style="font-weight: 500;">Obtén recompensas</h3>
+                        <h3 class="text-capitalize" style="font-weight: 500;">Obtén recompensas</h3>
                     </div>
                 </div>
                 <div class="col-1">
                     <div class="img-holder">
-                        <img class="pixel-art center-img" src="assets/images/highlight/arrow.png" alt="flecha"
-                            style="width:3em">
+                        <img class="pixel-art center-img highlight-section-arrow"
+                            src="assets/images/highlight/arrow.png" alt="flecha">
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="row">
                         <div class="h-img-holder">
-                            <img class="pixel-art center-img" src="assets/images/highlight/upgrade.png"
-                                style="width:14em; top:2em;" alt="mejora">
+                            <img class="pixel-art center-img highlight-section-3"
+                                src="assets/images/highlight/upgrade.png" alt="mejora">
                         </div>
                     </div>
                     <div class="row">
-                        <h3 class="mt-4 text-capitalize h4" style="font-weight: 500;">Mejora tu avatar</h3>
+                        <h3 class="text-capitalize" style="font-weight: 500;">Mejora tu avatar</h3>
                     </div>
                 </div>
             </div>
