fixed grid position on feature section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -141,7 +141,9 @@
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature1.png" alt="feature1">
+                    <div class="img-holder-feature">
+                        <img class="img-fluid" src="assets/images/feature/feature1.png" alt="feature1">
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6 mr-auto align-self-center">
@@ -170,9 +172,10 @@
                 </div>
             </div>
             <div class="col-lg-6 mr-auto justify-content-center">
-                <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature-example-1.jpg" alt="feature2">
+                    <div class="img-holder-feature">
+                        <img class="img-fluid" src="assets/images/feature/feature-example-1.jpg" alt="feature2">
+                    </div>
                 </div>
             </div>
         </div>
@@ -185,7 +188,9 @@
             <div class="col-lg-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <img class="img-fluid" src="assets/images/feature/feature-example-2.jpg" alt="feature3">
+                    <div class="img-holder-feature">
+                        <img class="img-fluid" src="assets/images/feature/feature-example-2.jpg" alt="feature3">
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6 mr-auto align-self-center">
@@ -217,7 +222,10 @@
             <div class="col-lg-6 mr-auto justify-content-center">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <img class="img-fluid " src="assets/images/feature/feature4.png" alt="feature4" width="275">
+                    <div class="img-holder-feature">
+                        <img class="img-fluid center-img" src="assets/images/feature/feature4.png" alt="feature4"
+                            width="275">
+                    </div>
                 </div>
             </div>
         </div>
