--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -22,12 +22,6 @@
         padding: 0;
     }
 
-    .img-holder {
-        position: relative;
-        width   : 100%;
-        height  : 100%;
-    }
-
     .h-img-holder {
         padding : 0;
         position: relative;
@@ -85,12 +79,6 @@
 
     h3 {
         font-size: 15px;
-    }
-
-    .img-holder {
-        position: relative;
-        width   : 100%;
-        height  : 100%;
     }
 
     .h-img-holder {
@@ -155,12 +143,6 @@
         font-size: 20px;
     }
 
-    .img-holder {
-        position: relative;
-        width   : 100%;
-        height  : 100%;
-    }
-
     .h-img-holder {
         padding : 0;
         position: relative;
@@ -215,12 +197,6 @@
     h3 {
         margin-top: 20px;
         font-size : 20px;
-    }
-
-    .img-holder {
-        position: relative;
-        width   : 100%;
-        height  : 100%;
     }
 
     .h-img-holder {
@@ -281,12 +257,6 @@
         font-size : 20px;
     }
 
-    .img-holder {
-        position: relative;
-        width   : 100%;
-        height  : 100%;
-    }
-
     .h-img-holder {
         padding : 0;
         position: relative;
@@ -345,12 +315,6 @@
         font-size : 20px;
     }
 
-    .img-holder {
-        position: relative;
-        width   : 100%;
-        height  : 100%;
-    }
-
     .h-img-holder {
         padding : 0;
         position: relative;
@@ -390,6 +354,21 @@
     .container {
         padding: 0px 110px;
     }
+}
+
+.img-holder-feature {
+    position       : relative;
+    width          : 30vw;
+    height         : 30vw;
+    /* border-width: 1px;
+    border-style   : solid;
+    border-color   : black; */
+}
+
+.img-holder {
+    position: relative;
+    width   : 100%;
+    height  : 100%;
 }
 
 body {
