--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -53,12 +53,8 @@
                         aburrido.
                     </p>
                 </div>
-
                 <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
-                    <a href="" class="btn btn-rounded-icon" data-aos="fade-up">
-                        <i class="fa fa-android"></i>
-                        Android
-                    </a>
+                    <a class="btn btn-google" href="#" title="Google Play" data-aos="fade-up">Google Play</a>
                 </div>
             </div>
             <div class="col-6 text-center">
@@ -240,10 +236,9 @@
                 <div class="col-lg-12">
                     <h2>Practica tus habilidades de matemática</h2>
                     <p>Obtén Mathyfight gratis!</p>
-                    <a href="" class="btn btn-rounded-icon" style="font-size:1.5rem">
-                        <i class="fa fa-android" aria-hidden="true"></i>
-                        Android
-                    </a>
+                    <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
+                        <a class="btn btn-google" href="#" title="Google Play" data-aos="fade-up">Google Play</a>
+                    </div>
                 </div>
             </div>
         </div>
