--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -54,7 +54,9 @@
                     </p>
                 </div>
                 <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
-                    <a class="btn btn-google" href="#" title="Google Play" data-aos="fade-up">Google Play</a>
+                    <div data-aos="fade-up">
+                        <a class="btn btn-google raise" href="#" title="Google Play">Google Play</a>
+                    </div>
                 </div>
             </div>
             <div class="col-6 text-center">
@@ -237,7 +239,9 @@
                     <h2>Practica tus habilidades de matemática</h2>
                     <p>Obtén Mathyfight gratis!</p>
                     <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
-                        <a class="btn btn-google" href="#" title="Google Play" data-aos="fade-up">Google Play</a>
+                        <div data-aos="fade-up">
+                            <a class="btn btn-google raise" href="#" title="Google Play">Google Play</a>
+                        </div>
                     </div>
                 </div>
             </div>
