updated feature descriptions

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -214,7 +214,8 @@
                     <!-- Feature Title -->
                     <h2>Examina tu progreso</h2>
                     <!-- Feature Description -->
-                    <p>Mira tus fortalezas y debilidades en matemática.</p>
+                    <p>Ve la cantidad de batallas ganadas y perdidas y la cantidad de problemas matemáticos resueltos y
+                        fallidos.</p>
                 </div>
             </div>
             <div class="col-lg-6 mr-auto justify-content-center">
