--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -135,16 +135,16 @@
 ===================================-->
 <section class="feature section pt-0">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 ml-auto justify-content-center">
+        <div class="row mb-5">
+            <div class="col-md-6 ml-auto justify-content-center">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                     <div class="img-holder-feature">
-                        <img class="img-fluid" src="assets/images/feature/feature1.png" alt="feature1">
+                        <img class="center-img feature-img" src="assets/images/feature/feature1.png" alt="feature1">
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 mr-auto align-self-center">
+            <div class="col-md-6 mr-auto align-self-center">
                 <div class="feature-content">
                     <!-- Feature Title -->
                     <h2>Derrota a monstruos resolviendo problemas</h2>
@@ -160,8 +160,8 @@
 
 <section class="feature section pt-0">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 ml-auto align-self-center">
+        <div class="row mb-5">
+            <div class="col-md-6 ml-auto align-self-center order-sm-last order-md-first">
                 <div class="feature-content">
                     <!-- Feature Title -->
                     <h2>Practica los temas de tu elección</h2>
@@ -169,10 +169,10 @@
                     <p>Selecciona de una gran cantidad de áreas y temas de matemática.</p>
                 </div>
             </div>
-            <div class="col-lg-6 mr-auto justify-content-center">
+            <div class="col-md-6 mr-auto justify-content-center feature-padding">
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                     <div class="img-holder-feature">
-                        <img class="img-fluid" src="assets/images/feature/feature-example-1.jpg" alt="feature2">
+                        <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature2">
                     </div>
                 </div>
             </div>
@@ -182,16 +182,16 @@
 
 <section class="feature section pt-0">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 ml-auto justify-content-center">
+        <div class="row mb-5">
+            <div class="col-md-6 ml-auto justify-content-center feature-padding">
                 <!-- Feature Mockup -->
                 <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                     <div class="img-holder-feature">
-                        <img class="img-fluid" src="assets/images/feature/feature-example-2.jpg" alt="feature3">
+                        <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature3">
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 mr-auto align-self-center">
+            <div class="col-md-6 mr-auto align-self-center">
                 <div class="feature-content">
                     <!-- Feature Title -->
                     <h2>Customiza tu avatar</h2>
@@ -208,8 +208,8 @@
 
 <section class="feature section pt-0">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 ml-auto align-self-center">
+        <div class="row mb-5">
+            <div class="col-md-6 ml-auto align-self-center order-sm-last order-md-first">
                 <div class="feature-content">
                     <!-- Feature Title -->
                     <h2>Examina tu progreso</h2>
@@ -218,12 +218,11 @@
                         fallidos.</p>
                 </div>
             </div>
-            <div class="col-lg-6 mr-auto justify-content-center">
+            <div class="col-md-6 mr-auto justify-content-center feature-padding">
                 <!-- Feature mockup -->
                 <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                     <div class="img-holder-feature">
-                        <img class="img-fluid center-img" src="assets/images/feature/feature4.png" alt="feature4"
-                            width="275">
+                        <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4">
                     </div>
                 </div>
             </div>
@@ -239,7 +238,8 @@
                 <div class="col-lg-12">
                     <h2>Practica tus habilidades de matemática</h2>
                     <p>Obtén Mathyfight gratis!</p>
-                    <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
+                    <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-duration="300"
+                        data-aos-offset="0">
                         <div data-aos="fade-up">
                             <a class="btn btn-google raise" href="#" title="Google Play">Google Play</a>
                         </div>
