--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
 =            Hero Section            =
 =====================================-->
 <section class="section gradient-banner">
-    <div class="shapes-container">
+    <div class="shapes-container d-none d-sm-block d-xm-block">
         <div class="shape" data-aos="fade-down-left" data-aos-duration="1500" data-aos-delay="100" data-aos-offset="0">
         </div>
         <div class="shape" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="0"></div>
@@ -161,7 +161,7 @@
 <section class="feature section pt-0">
     <div class="container">
         <div class="row mb-5">
-            <div class="col-md-6 ml-auto align-self-center order-sm-last order-md-first">
+            <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
                 <div class="feature-content">
                     <!-- Feature Title -->
                     <h2>Practica los temas de tu elección</h2>
@@ -209,7 +209,7 @@
 <section class="feature section pt-0">
     <div class="container">
         <div class="row mb-5">
-            <div class="col-md-6 ml-auto align-self-center order-sm-last order-md-first">
+            <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
                 <div class="feature-content">
                     <!-- Feature Title -->
                     <h2>Examina tu progreso</h2>
