overflow and animations fixed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -159,7 +159,7 @@
 </section>
 
 <section class="feature section pt-0">
-    <div class="container">
+    <div class="container" style="overflow-x: hidden;">
         <div class="row mb-5">
             <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
                 <div class="feature-content">
@@ -181,7 +181,7 @@
 </section>
 
 <section class="feature section pt-0">
-    <div class="container">
+    <div class="container" style="overflow-x: hidden;">
         <div class="row mb-5">
             <div class="col-md-6 ml-auto justify-content-center feature-padding">
                 <!-- Feature Mockup -->
@@ -207,7 +207,7 @@
 </section>
 
 <section class="feature section pt-0">
-    <div class="container">
+    <div class="container" style="overflow-x: hidden;">
         <div class="row mb-5">
             <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
                 <div class="feature-content">
